[project]
name = "marketstream"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "pandas>=2.3.3",
    "pillow>=12.1.1",
    "requests>=2.32.5",
    "streamlit>=1.54.0",
    "typer>=0.21.1",
    "websockets>=16.0",
]
